--- a/link.vcxproj.filters
+++ b/link.vcxproj.filters
@@ -21,31 +21,31 @@
     <ClCompile Include="struct_do.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="show.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="random_show.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="position.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="main_menu.c">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="show.c">
+    <ClCompile Include="init.c">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="animation.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="init.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="random_show.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="active_show.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="position.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="draw.c">
+    <ClCompile Include="draw.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
